--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,8 @@
 # Arduino
 .DS_Store
 bin/*/
-*build-*
-*build*
+src/WIOTerminal/*build-*
+src/WIOTerminal/*build*
 *~
 build-tmp/
 Makefile
@@ -68,3 +68,37 @@ replay_pid*
 
 # Visual Studio Code
 .vscode
+
+# Gradle files
+src/LocusImperiumApp/.gradle/
+src/LocusImperiumApp/app/build/
+
+# Local configuration file (sdk path, etc)
+local.properties
+
+# Android Studio generated files and folders
+src/LocusImperiumApp/captures/
+src/LocusImperiumApp/.externalNativeBuild/
+src/LocusImperiumApp/.cxx/
+*.apk
+output.json
+
+# IntelliJ
+*.iml
+src/LocusImperiumApp/.idea/
+misc.xml
+deploymentTargetDropDown.xml
+render.experimental.xml
+
+# Keystore files
+*.jks
+*.keystore
+
+# Google Services (e.g. APIs or Firebase)
+google-services.json
+
+# Android Profiling
+*.hprof
+
+# WIOTerminal mqtt
+/src/WIOTerminal/WifiDetails.h
