GUI has been made #31
The initial gui has been made with logic thats already been made, mqtt logic to display the,
people counter, humidity, loudness, and temperature has been added to prevent future merge conflicts.

--- a/src/LocusImperiumApp/app/src/main/AndroidManifest.xml
+++ b/src/LocusImperiumApp/app/src/main/AndroidManifest.xml
@@ -23,7 +23,14 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Material3.Dark">
+        android:theme="@style/Theme.Material3.Dark.NoActionBar">
+
+        <activity
+            android:name=".SettingsActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ConnectActivity"
+            android:exported="false" />
         <activity
             android:name=".MainActivity"
             android:exported="true">
