--- a/.gitignore
+++ b/.gitignore
@@ -24,6 +24,7 @@ debug.txt
 
 # Package Files #
 *.jar
+!gradle/wrapper/gradle-wrapper.jar
 *.war
 *.nar
 *.ear
@@ -71,6 +72,8 @@ replay_pid*
 # Gradle files
 src/LocusImperiumApp/.gradle/
 src/LocusImperiumApp/app/build/
+src/LocusImperiumApp/app/lint/
+builds
 
 # Local configuration file (sdk path, etc)
 local.properties
