Added reference to the original source of the ci template #40
Modified the .gitignore to ignore a folder used for
testing ci locally

--- a/.gitignore
+++ b/.gitignore
@@ -73,7 +73,7 @@ replay_pid*
 src/LocusImperiumApp/.gradle/
 src/LocusImperiumApp/app/build/
 src/LocusImperiumApp/app/lint/
-builds
+builds/
 
 # Local configuration file (sdk path, etc)
 local.properties
