Created basic UI testing to check text #37

--- a/.gitignore
+++ b/.gitignore
@@ -101,3 +101,8 @@ google-services.json
 
 # WIOTerminal mqtt
 WifiDetails.h
+# Ignore Gradle project-specific cache directory
+.gradle
+
+# Ignore Gradle build output directory
+build
