--- a/.gitignore
+++ b/.gitignore
@@ -104,3 +104,8 @@ google-services.json
 
 # WIOTerminal mqtt
 WifiDetails.h
+# Ignore Gradle project-specific cache directory
+.gradle
+
+# Ignore Gradle build output directory
+build
