(Solving merge conflict) Implemented test coverage report creation with JaCoco

--- a/src/LocusImperiumApp/app/build.gradle
+++ b/src/LocusImperiumApp/app/build.gradle
@@ -2,6 +2,8 @@ plugins {
     id 'com.android.application'
 }
 
+apply from: "$project.rootDir/jacoco.gradle"
+
 android {
     namespace 'com.group6.locusimperium'
     compileSdk 33
