--- a/src/LocusImperiumApp/build.gradle
+++ b/src/LocusImperiumApp/build.gradle
@@ -1,3 +1,10 @@
+buildscript {
+    dependencies {
+        // dependency for JaCoCo
+        classpath "org.jacoco:org.jacoco.core:0.8.6"
+    }
+}
+
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 plugins {
     id 'com.android.application' version '7.4.2' apply false
@@ -6,4 +13,10 @@ plugins {
 
 task clean(type: Delete) {
     delete rootProject.buildDir
+}
+
+
+
+allprojects {
+   apply plugin: 'jacoco'
 }
