--- a/src/LocusImperiumApp/jacoco.gradle
+++ b/src/LocusImperiumApp/jacoco.gradle
@@ -89,8 +89,8 @@ def setupAndroidReporting() {
                 additionalSourceDirs.setFrom(files(coverageSourceDirs))
 
                 reports {
-                    csv.enabled false // change if needed
-                    xml.enabled true // change if needed
+                    csv.required = false // change if needed
+                    xml.required = true // change if needed
                     html {
                         enabled true
                         destination file("${buildDir}/coverage-report")
