--- a/src/LocusImperiumApp/app/build.gradle
+++ b/src/LocusImperiumApp/app/build.gradle
@@ -48,6 +48,9 @@ dependencies {
 
     implementation 'androidx.work:work-runtime-ktx:2.8.1'
 
+    // dependency for Material UI
+    implementation 'com.google.android.material:material:1.4.0'
+
 
 
     // Espresso
