--- a/src/LocusImperiumApp/app/build.gradle
+++ b/src/LocusImperiumApp/app/build.gradle
@@ -40,7 +40,6 @@ dependencies {
     implementation 'androidx.localbroadcastmanager:localbroadcastmanager:1.1.0'
 
     implementation 'androidx.appcompat:appcompat:1.6.1'
-    implementation 'com.google.android.material:material:1.8.0'
 
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     testImplementation 'junit:junit:4.13.2'
@@ -51,13 +50,10 @@ dependencies {
 
     implementation 'androidx.work:work-runtime-ktx:2.8.1'
 
-    // dependency for Material UI
-    implementation 'com.google.android.material:material:1.4.0'
-
+    // dependency for Material Ui
+    implementation 'com.google.android.material:material:1.8.0'
     // dependency for animations
     implementation 'com.github.hajiyevelnur92:intentanimation:1.0'
-
-
 
     // Espresso
     def androidx_test_espresso = "3.1.0"
