Make report coverage run in parallel #69

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -111,6 +111,7 @@ reportCoverage:
   allow_failure: true
   interruptible: true
   stage: testCoverage
+  needs: []
   script:
     - ./gradlew createDebugCoverageReport
 
